fixed overflow issue causing x-axis scroll

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -60,6 +60,7 @@ body {
 	font-family: 'Roboto', sans-serif;
     background-color: $color-background;
 	color: $color-text;
+	overflow-x: hidden;
 }
 
 a {
